# ChatGPT_Test

./: LICENSE  README.md  pyproject.toml  start-me.py  start_me.py
forti-manager/: __init__.py  forti-manager-client.py  forti_manager_client.py
forti-manager/models/: __init__.py  forti-models.py
forti_manager/: __init__.py  forti_manager_client.py
forti_manager/models/: __init__.py  forti_models.py
