[tool.poetry]
name = "chatgpt-test"
version = "0.1.0"
description = ""
authors = ["codster <m.fusilli@outlook.com>"]
readme = "README.md"
packages = [{include = "chatgpt_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
